@@ -397,6 +397,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|net
+operator|.
+name|URISyntaxException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|ArrayList
@@ -707,26 +717,14 @@ block|{
 name|Runnable
 name|runner
 init|=
-operator|new
-name|Runnable
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|void
-name|run
 parameter_list|()
-block|{
+lambda|->
 name|PROJECT_STATE_UTIL
 operator|.
 name|saveLastState
 argument_list|(
 name|projectController
 argument_list|)
-expr_stmt|;
-block|}
-block|}
 decl_stmt|;
 name|Runtime
 operator|.
@@ -1201,39 +1199,11 @@ argument_list|(
 literal|"Project opened..."
 argument_list|)
 expr_stmt|;
-name|frame
-operator|.
-name|setTitle
-argument_list|(
-name|project
-operator|.
-name|getConfigurationResource
-argument_list|()
-operator|.
-name|getURL
-argument_list|()
-operator|.
-name|getPath
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-comment|// update preferences
-if|if
-condition|(
-name|project
-operator|.
-name|getConfigurationResource
-argument_list|()
-operator|!=
-literal|null
-condition|)
+try|try
 block|{
-name|getLastDirectory
-argument_list|()
-operator|.
-name|setDirectory
-argument_list|(
+name|File
+name|file
+init|=
 operator|new
 name|File
 argument_list|(
@@ -1245,9 +1215,27 @@ operator|.
 name|getURL
 argument_list|()
 operator|.
-name|getPath
+name|toURI
 argument_list|()
 argument_list|)
+decl_stmt|;
+name|frame
+operator|.
+name|setTitle
+argument_list|(
+name|file
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// update preferences
+name|getLastDirectory
+argument_list|()
+operator|.
+name|setDirectory
+argument_list|(
+name|file
 argument_list|)
 expr_stmt|;
 name|frame
@@ -1255,6 +1243,14 @@ operator|.
 name|fireRecentFileListChanged
 argument_list|()
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|URISyntaxException
+name|ignore
+parameter_list|)
+block|{
+block|}
 block|}
 name|PROJECT_STATE_UTIL
 operator|.
@@ -1422,17 +1418,6 @@ name|getLastProjFiles
 argument_list|()
 decl_stmt|;
 comment|// Add proj path to the preferences
-comment|// Prevent duplicate entries.
-if|if
-condition|(
-name|arr
-operator|.
-name|contains
-argument_list|(
-name|file
-argument_list|)
-condition|)
-block|{
 name|arr
 operator|.
 name|remove
@@ -1440,7 +1425,6 @@ argument_list|(
 name|file
 argument_list|)
 expr_stmt|;
-block|}
 name|arr
 operator|.
 name|add
@@ -1538,7 +1522,47 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-comment|/**      * Performs status bar update with a message. Message will dissappear in 6 seconds.      */
+specifier|public
+name|void
+name|changePathInLastProjListAction
+parameter_list|(
+name|File
+name|oldFile
+parameter_list|,
+name|File
+name|newFile
+parameter_list|)
+block|{
+name|ModelerPreferences
+operator|.
+name|getLastProjFiles
+argument_list|()
+operator|.
+name|remove
+argument_list|(
+name|oldFile
+argument_list|)
+expr_stmt|;
+name|addToLastProjListAction
+argument_list|(
+name|newFile
+argument_list|)
+expr_stmt|;
+name|getLastDirectory
+argument_list|()
+operator|.
+name|setDirectory
+argument_list|(
+name|newFile
+argument_list|)
+expr_stmt|;
+name|frame
+operator|.
+name|fireRecentFileListChanged
+argument_list|()
+expr_stmt|;
+block|}
+comment|/**      * Performs status bar update with a message. Message will disappear in 6 seconds.      */
 specifier|public
 name|void
 name|updateStatus
@@ -1575,91 +1599,30 @@ operator|>
 literal|0
 condition|)
 block|{
-name|Thread
-name|cleanup
-init|=
 operator|new
-name|ExpireThread
-argument_list|(
-name|message
-argument_list|,
-literal|6
-argument_list|)
-decl_stmt|;
-name|cleanup
-operator|.
-name|start
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-specifier|public
-name|DbImportController
-name|getDbImportController
-parameter_list|()
-block|{
-return|return
-name|dbImportController
-return|;
-block|}
-class|class
-name|ExpireThread
-extends|extends
 name|Thread
-block|{
-name|int
-name|seconds
-decl_stmt|;
-specifier|protected
-name|String
-name|message
-decl_stmt|;
-name|ExpireThread
-parameter_list|(
-name|String
-name|message
-parameter_list|,
-name|int
-name|seconds
-parameter_list|)
-block|{
-name|this
-operator|.
-name|seconds
-operator|=
-name|seconds
-expr_stmt|;
-name|this
-operator|.
-name|message
-operator|=
-name|message
-expr_stmt|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|void
-name|run
+argument_list|(
 parameter_list|()
+lambda|->
 block|{
 try|try
 block|{
+name|Thread
+operator|.
 name|sleep
 argument_list|(
-name|seconds
+literal|6
 operator|*
-literal|1000
+literal|10000
 argument_list|)
 expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
 name|InterruptedException
-name|e
+name|ignore
 parameter_list|)
 block|{
-comment|// ignore exception
 block|}
 if|if
 condition|(
@@ -1684,161 +1647,21 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+argument_list|)
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 specifier|public
-name|void
-name|changePathInLastProjListAction
-parameter_list|(
-name|File
-name|oldFile
-parameter_list|,
-name|File
-name|newFile
-parameter_list|)
+name|DbImportController
+name|getDbImportController
+parameter_list|()
 block|{
-name|Preferences
-name|frefLastProjFiles
-init|=
-name|ModelerPreferences
-operator|.
-name|getLastProjFilesPref
-argument_list|()
-decl_stmt|;
-name|List
-argument_list|<
-name|File
-argument_list|>
-name|arr
-init|=
-name|ModelerPreferences
-operator|.
-name|getLastProjFiles
-argument_list|()
-decl_stmt|;
-comment|// Add proj path to the preferences
-name|arr
-operator|.
-name|remove
-argument_list|(
-name|oldFile
-argument_list|)
-expr_stmt|;
-name|arr
-operator|.
-name|remove
-argument_list|(
-name|newFile
-argument_list|)
-expr_stmt|;
-name|arr
-operator|.
-name|add
-argument_list|(
-literal|0
-argument_list|,
-name|newFile
-argument_list|)
-expr_stmt|;
-while|while
-condition|(
-name|arr
-operator|.
-name|size
-argument_list|()
-operator|>
-name|ModelerPreferences
-operator|.
-name|LAST_PROJ_FILES_SIZE
-condition|)
-block|{
-name|arr
-operator|.
-name|remove
-argument_list|(
-name|arr
-operator|.
-name|size
-argument_list|()
-operator|-
-literal|1
-argument_list|)
-expr_stmt|;
-block|}
-try|try
-block|{
-name|frefLastProjFiles
-operator|.
-name|clear
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|BackingStoreException
-name|e
-parameter_list|)
-block|{
-comment|// ignore exception
-block|}
-name|int
-name|size
-init|=
-name|arr
-operator|.
-name|size
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|size
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|frefLastProjFiles
-operator|.
-name|put
-argument_list|(
-name|String
-operator|.
-name|valueOf
-argument_list|(
-name|i
-argument_list|)
-argument_list|,
-name|arr
-operator|.
-name|get
-argument_list|(
-name|i
-argument_list|)
-operator|.
-name|getAbsolutePath
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-name|getLastDirectory
-argument_list|()
-operator|.
-name|setDirectory
-argument_list|(
-name|newFile
-argument_list|)
-expr_stmt|;
-name|frame
-operator|.
-name|fireRecentFileListChanged
-argument_list|()
-expr_stmt|;
+return|return
+name|dbImportController
+return|;
 block|}
 block|}
 end_class
