@@ -29,6 +29,26 @@ begin_import
 import|import
 name|java
 operator|.
+name|net
+operator|.
+name|URI
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
+name|URISyntaxException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|Iterator
@@ -74,6 +94,18 @@ operator|.
 name|swing
 operator|.
 name|SwingUtilities
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|CayenneRuntimeException
 import|;
 end_import
 
@@ -202,7 +234,7 @@ specifier|private
 specifier|static
 specifier|final
 name|Logger
-name|log
+name|LOGGER
 init|=
 name|LoggerFactory
 operator|.
@@ -224,13 +256,19 @@ literal|4000
 decl_stmt|;
 comment|/**      * The names of the files to observe for changes.      */
 specifier|protected
+specifier|final
 name|Map
 argument_list|<
-name|String
+name|URI
 argument_list|,
 name|FileInfo
 argument_list|>
 name|files
+decl_stmt|;
+specifier|protected
+specifier|final
+name|ProjectController
+name|mediator
 decl_stmt|;
 specifier|protected
 name|boolean
@@ -243,10 +281,6 @@ decl_stmt|;
 specifier|protected
 name|boolean
 name|isShownRemoveDialog
-decl_stmt|;
-specifier|protected
-name|ProjectController
-name|mediator
 decl_stmt|;
 specifier|public
 name|ProjectFileChangeTracker
@@ -311,9 +345,10 @@ operator|!=
 literal|null
 condition|)
 block|{
-name|String
-name|projectPath
-init|=
+try|try
+block|{
+name|addFile
+argument_list|(
 name|project
 operator|.
 name|getConfigurationResource
@@ -322,24 +357,15 @@ operator|.
 name|getURL
 argument_list|()
 operator|.
-name|getPath
+name|toURI
 argument_list|()
-operator|+
-name|File
-operator|.
-name|separator
-decl_stmt|;
-name|addFile
-argument_list|(
-name|projectPath
 argument_list|)
 expr_stmt|;
-name|Iterator
-argument_list|<
+for|for
+control|(
 name|DataMap
-argument_list|>
-name|it
-init|=
+name|dm
+range|:
 operator|(
 operator|(
 name|DataChannelDescriptor
@@ -352,26 +378,8 @@ operator|)
 operator|.
 name|getDataMaps
 argument_list|()
-operator|.
-name|iterator
-argument_list|()
-decl_stmt|;
-while|while
-condition|(
-name|it
-operator|.
-name|hasNext
-argument_list|()
-condition|)
+control|)
 block|{
-name|DataMap
-name|dm
-init|=
-name|it
-operator|.
-name|next
-argument_list|()
-decl_stmt|;
 if|if
 condition|(
 name|dm
@@ -393,11 +401,28 @@ operator|.
 name|getURL
 argument_list|()
 operator|.
-name|getPath
+name|toURI
 argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|URISyntaxException
+name|ex
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|CayenneRuntimeException
+argument_list|(
+literal|"Unable to start change tracker"
+argument_list|,
+name|ex
+argument_list|)
+throw|;
 block|}
 block|}
 name|resumeWatching
@@ -413,14 +438,8 @@ name|SwingUtilities
 operator|.
 name|invokeLater
 argument_list|(
-operator|new
-name|Runnable
-argument_list|()
-block|{
-specifier|public
-name|void
-name|run
 parameter_list|()
+lambda|->
 block|{
 name|isShownChangeDialog
 operator|=
@@ -449,7 +468,11 @@ condition|)
 block|{
 name|File
 name|fileDirectory
-init|=
+decl_stmt|;
+try|try
+block|{
+name|fileDirectory
+operator|=
 operator|new
 name|File
 argument_list|(
@@ -464,10 +487,38 @@ operator|.
 name|getURL
 argument_list|()
 operator|.
-name|getPath
+name|toURI
 argument_list|()
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|URISyntaxException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|CayenneRuntimeException
+argument_list|(
+literal|"Unable to open project %s"
+argument_list|,
+name|e
+argument_list|,
+name|mediator
+operator|.
+name|getProject
+argument_list|()
+operator|.
+name|getConfigurationResource
+argument_list|()
+operator|.
+name|getURL
+argument_list|()
+argument_list|)
+throw|;
+block|}
 name|Application
 operator|.
 name|getInstance
@@ -505,7 +556,6 @@ operator|=
 literal|false
 expr_stmt|;
 block|}
-block|}
 argument_list|)
 expr_stmt|;
 block|}
@@ -528,14 +578,8 @@ name|SwingUtilities
 operator|.
 name|invokeLater
 argument_list|(
-operator|new
-name|Runnable
-argument_list|()
-block|{
-specifier|public
-name|void
-name|run
 parameter_list|()
+lambda|->
 block|{
 name|isShownRemoveDialog
 operator|=
@@ -622,7 +666,6 @@ operator|=
 literal|false
 expr_stmt|;
 block|}
-block|}
 argument_list|)
 expr_stmt|;
 block|}
@@ -669,7 +712,7 @@ specifier|public
 name|void
 name|addFile
 parameter_list|(
-name|String
+name|URI
 name|location
 parameter_list|)
 block|{
@@ -695,7 +738,7 @@ name|SecurityException
 name|e
 parameter_list|)
 block|{
-name|log
+name|LOGGER
 operator|.
 name|error
 argument_list|(
@@ -721,7 +764,12 @@ name|files
 operator|.
 name|remove
 argument_list|(
+name|URI
+operator|.
+name|create
+argument_list|(
 name|location
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -812,7 +860,7 @@ name|SecurityException
 name|e
 parameter_list|)
 block|{
-name|log
+name|LOGGER
 operator|.
 name|error
 argument_list|(
@@ -873,7 +921,6 @@ literal|true
 expr_stmt|;
 block|}
 block|}
-comment|// the file has been removed
 if|else if
 condition|(
 name|fi
@@ -885,6 +932,7 @@ operator|-
 literal|1
 condition|)
 block|{
+comment|// the file has been removed
 name|hasDeletions
 operator|=
 literal|true
@@ -980,22 +1028,26 @@ expr_stmt|;
 block|}
 comment|/**      * Class to store information about files (last modification time& File      * pointer)      */
 specifier|protected
+specifier|static
 class|class
 name|FileInfo
 block|{
 comment|/**          * Exact java.io.File object, may not be null          */
+specifier|private
+specifier|final
 name|File
 name|file
 decl_stmt|;
 comment|/**          * Time the file was modified          */
+specifier|private
 name|long
 name|lastModified
 decl_stmt|;
 comment|/**          * Creates new object          *           * @param location          *            the file path          */
-specifier|public
+specifier|protected
 name|FileInfo
 parameter_list|(
-name|String
+name|URI
 name|location
 parameter_list|)
 block|{
@@ -1023,7 +1075,7 @@ operator|-
 literal|1
 expr_stmt|;
 block|}
-specifier|public
+specifier|protected
 name|File
 name|getFile
 parameter_list|()
@@ -1032,7 +1084,7 @@ return|return
 name|file
 return|;
 block|}
-specifier|public
+specifier|protected
 name|long
 name|getLastModified
 parameter_list|()
@@ -1041,7 +1093,7 @@ return|return
 name|lastModified
 return|;
 block|}
-specifier|public
+specifier|protected
 name|void
 name|setLastModified
 parameter_list|(
